# bookstore

./: Dockerfile  Makefile  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
api/: tests.py  views.py
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py
order/migrations/: 0001_initial.py  0002_alter_order_options.py
order/models/: order.py
order/serializer/: order_serializers.py
order/serializers/: order_serializer.py  order_serializers.py
order/tests/: test_order.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __inite__.py  order_viewset.py
product/: models.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  category_serializers.py  product_serializers.py
product/test_suite/: test_category.py
product/test_suite/test_serializers/: test_category.py  test_product_serializer.py
product/test_suite/test_viewset/: test_product_viewset.py
product/test_suite/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/tests/: test_product.py
product/tests/test_viewset/: test_product_viewset.py
product/tests/test_viewsets/: test_category_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
templates/: hello_world.html
